--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12 col-12 py-5 mt-5 mb-3 text-center">
-            <h1 class="mb-4" data-aos="fade-up">Digital Trend Blog</h1>
+            <h1 class="mb-4" data-aos="fade-up">CodeHub Blog</h1>
           </div>
 
           <div class="col-lg-7 col-md-7 col-12 mb-4">
