--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div class="mb-3">
                 <img src="images/icons/rocket.svg" alt="" />
               </div>
-              <p class="fs-large">Very Fast</p>
+              <p class="fs-large">Career growth</p>
               <p class="fs-small fg-grey">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
               </p>
@@ -161,7 +161,7 @@
               <div class="mb-3">
                 <img src="images/icons/testimony.svg" alt="" />
               </div>
-              <p class="fs-large">Happy Client</p>
+              <p class="fs-large">1-1 Mentorship</p>
               <p class="fs-small fg-grey">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
               </p>
@@ -175,7 +175,7 @@
               <div class="mb-3">
                 <img src="images/icons/promotion.svg" alt="" />
               </div>
-              <p class="fs-large">Free Ads</p>
+              <p class="fs-large">Workplace exposure</p>
               <p class="fs-small fg-grey">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
               </p>
@@ -203,7 +203,7 @@
               <div class="mb-3">
                 <img src="images/icons/support.svg" alt="" />
               </div>
-              <p class="fs-large">24/7 Support</p>
+              <p class="fs-large">Remote Support</p>
               <p class="fs-small fg-grey">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
               </p>
@@ -217,7 +217,7 @@
               <div class="mb-3">
                 <img src="images/icons/laptop.svg" alt="" />
               </div>
-              <p class="fs-large">Full Features</p>
+              <p class="fs-large">Software access</p>
               <p class="fs-small fg-white">
                 Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
               </p>
